# ComfyUI-GU_Nodepack

./: .gitignore  README.md  __init__.py  functions.py  gu_funclib.py  nodes.py  prestartup_script.py  pyproject.toml  requirements.txt
example/: GU_test.json
web/: custom_words.txt  default_words.txt  model_codes.txt  proj_codes.txt
web/js/: appearance.js  jsnodes.js
